# bmi-tester

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CREDITS.rst  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  environment.yml  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-testing.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml  docs.yml  flake8.yml  test.yml
bmi_tester/: __init__.py  _version.py  api.py  bmi.py  bminose.py  bmipytest.py  bmitester.py  cmd.py  nosetester.py  termcolors.py  units.c  units.pyx
bmi_tester/bootstrap/: test_control.py
bmi_tester/data/udunits/: README  udunits2-base.xml
bmi_tester/tests/: __init__.py  conftest.py  test_bmi.py  test_control.py  test_grid.py  test_grid_uniform_rectilinear.py  test_grid_unstructured.py  test_info.py  test_time.py  test_value.py  test_var.py  utils.py
bmi_tester/tests/stage_1/: test_info.py  test_time.py
bmi_tester/tests/stage_2/: test_var.py
bmi_tester/tests/stage_3/: test_grid.py  test_grid_uniform_rectilinear.py  test_grid_unstructured.py  test_value.py
bmi_tester/tests_pytest/: __init__.py  conftest.py  names.txt  test_control.py  test_grid.py  test_grid_uniform_rectilinear.py  test_grid_unstructured.py  test_info.py  test_time.py  test_value.py  test_var.py  utils.py
ci/: requirements-lint-linux.yml  requirements-py36-windows.yml  requirements-py37-linux.yml  requirements-py37-osx.yml  requirements-py37-windows.yml
deprecated/tests_pytest/: conftest.py  test_control.py  test_grid_uniform_rectilinear.py  test_info.py  test_time.py  test_value.py  test_var.py
docs/: Makefile  bmi_tester.rst  bmi_tester.tests.rst  bmi_tester.tests_pytest.rst  conf.py  index.md  index.rst  license.rst  make.bat  modules.rst
docs/_templates/: links.html  sidebarintro.html
docs/api/: index.rst
recipe/: meta.yaml
requirements/: required.txt
src/bmi_tester/: __init__.py  __main__.py  _utils.py  _version.py  api.py  bmipytest.py  main.py
src/bmi_tester/_tests/stage_1/: info_test.py  time_test.py
src/bmi_tester/_tests/stage_2/: var_test.py
src/bmi_tester/_tests/stage_3/: grid_test.py  grid_uniform_rectilinear_test.py  grid_unstructured_test.py  value_test.py
src/bmi_tester/data/udunits/: udunits2-accepted.xml
src/bmi_tester/tests/stage_3/: test_grid_uniform_rectilinear.py
testing/: bmi.py
tests/: api_test.py  bmipytest_test.py  test_api.py  test_bmipytest.py  test_units.py  units_test.py
