[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0.0rc1"
testpaths = ["tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
    --ignore bmi_tester/bootstrap
    --ignore bmi_tester/tests
    --tb native
    --strict
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88
