[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bmi-tester"
description = "Test Python BMI bindings"
version = "0.5.6.dev0"
authors = [
  {email = "eric.hutton@colorado.edu"},
  {name = "Eric Hutton"},
]
maintainers = [
  {email = "eric.hutton@colorado.edu"},
  {name = "Eric Hutton"},
  {email = "mark.piper@colorado.edu"},
  {name = "Mark Piper"}
]
keywords = [
  "bmi",
  "csdms",
  "model",
  "python",
  "testing",
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
  "click",
  "gimli.units",
  "model_metadata",
  "numpy",
  "pytest",
  "pytest-dependency",
  "standard_names",
]
dynamic = ["readme"]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
]
testing = [
  "coveralls",
  "pytest>=3.6",
  "pytest-cov",
]
docs = [
  "sphinx>=1.5.1",
]
build = [
  "build",
  "twine",
  "zest.releaser"
]

[project.urls]
Homepage = "https://csdms.colorado.edu"
Documentation = "https://bmi-tester.readthedocs.io/"
Repository = "https://github.com/csdms/bmi-tester"
Changelog = "https://github.com/csdms/bmi-tester/blob/master/CHANGES.rst"

[project.scripts]
bmi-test = "bmi_tester.bmipytest:main"

[project.entry-points."bmi.plugins"]
bmi_test = "bmi_tester.bmipytest:configure_parser_test"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CREDITS.rst", "CHANGES.rst"], content-type = "text/x-rst"}

[tool.pytest.ini_options]
minversion = "6.0.0rc1"
testpaths = ["tests"]
norecursedirs = [".*", "*.egg*", "build", "dist"]
addopts = """
    --ignore bmi_tester/bootstrap
    --ignore bmi_tester/tests
    --tb native
    --strict-markers
    --durations 16
    --doctest-modules
    -vvv
"""
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.zest-releaser]
tag-format = "v{version}"
