[metadata]
name = bmi-tester
version = 0.5.6.dev0
description = Test Python BMI bindings
keywords = bmi
long_description = file: README.rst, CREDITS.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = Eric Hutton
author_email = eric.hutton@colorado.edu
license = MIT
license_files = LICENSE.rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Physics
url = https://github.com/csdms/bmi-tester

[options]
include_package_data = True
packages = find:
install_requires =
    click
    gimli.units
    model_metadata
    numpy
    pytest
    pytest-dependency
    standard_names

[options.entry_points]
console_scripts =
    bmi-test = bmi_tester.bmipytest:main
bmi.plugins =
    bmi_test = bmi_tester.bmipytest:configure_parser_test

[zest.releaser]
tag-format = v{version}

[flake8]
exclude = docs
ignore =
	E203
	E501
	W503
max-line-length = 88
